# 2025

./: .gitignore  README.md  postgrescheat.md
ai-pdf/: .gitignore
astro/: notes.md
bandi-mix/: package-lock.json  package.json  plan.md
bandimix/:  tsconfig.base.json  eslint.config.js  package.json  plan.md  pnpm-lock.yaml  prettier.config.js
blog/: package-lock.json  package.json
blog-md/: README.md  package-lock.json  package.json
book/: package-lock.json  package.json
bookstore/: bookstore.db  check_db.mjs  package-lock.json  package.json
cursor/: requirements.txt  scrape_tipplap.py
devblog/: notes.md  package-lock.json  package.json  tailwind.config.ts
easy-todo/: feladat.md
filmsorozat/: test.ts
flashscore/: .env.example  .gitignore  gemma.js  jest.config.js  package-lock.json  package.json
flex/: missing.md  plan.md
flex-v3/: package-lock.json  package.json
googletest/: package-lock.json  package.json  test.js  test.ts  tsconfig.json
memory-game/: note.md  package-lock.json  package.json
memory-game-2/: memory-game.db  package-lock.json  package.json
mixlabor-clone/: .prettierignore  README.md  package.json  pnpm-lock.yaml
nextjs-todo/: next.config.ts  package-lock.json  package.json  todos.db
pdf-to-json/: .env.example  .gitignore  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  TASK_10_IMPLEMENTATION_SUMMARY.md  TASK_16_SECURITY_IMPLEMENTATION_SUMMARY.md  TASK_7_IMPLEMENTATION_SUMMARY.md  alembic.ini  api_output.txt  cli_options.txt  debug_extraction.py  debug_extraction_output.txt  debug_output.txt  debug_patterns.py  debug_patterns_output.txt  debug_test.py  deploy.sh  docker-compose.production.yml  docker-compose.yml  extraction_test.txt  extraction_test2.txt  football_conversion.txt  football_conversion2.txt  football_conversion3.txt  football_conversion_final.txt  football_test.json  health_check.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  streamlit_output2.txt  tasks.md  test_football.json  test_imports.py  test_output.json
pdf-to-json/.kiro/specs/football-automation-enhancements/: design.md  requirements.md  tasks.md
pdf-to-json/.kiro/specs/football-data-enhancement/: design.md  requirements.md  tasks.md
pdf-to-json/.kiro/steering/: product.md  structure.md  tech.md
pdf-to-json/alembic/: env.py
pdf-to-json/alembic/versions/: 20241211_1200_001_initial_database_schema.py
pdf-to-json/config/: app.json  extractor_patterns.json  logging.json  market_keywords.json  market_priorities.json  team_aliases.json
pdf-to-json/config/automation/: automation.development.json  automation.json  automation.production.json  automation.staging.json  automation.testing.json  security.json
pdf-to-json/config/schemas/: default_structure.json
pdf-to-json/docker/: README.md  entrypoint.sh  haproxy.cfg  health-check.sh  init-db.sql  nginx.conf  prometheus.yml  redis.conf
pdf-to-json/docker/grafana/datasources/: prometheus.yml
pdf-to-json/docs/: API_DOCUMENTATION.md  API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  MIGRATION_GUIDE.md  USER_MANUAL.md
pdf-to-json/output/: enhanced_normalized_teams.json  normalized_teams.json  team_normalizer_demo_results.json
pdf-to-json/scripts/: rolling-deploy.sh
pdf-to-json/src/: __init__.py
pdf-to-json/src/api/: enhanced_main.py  main.py
pdf-to-json/src/automation/: __init__.py  automation_manager.py  backup_manager.py  benchmarking.py  cache_manager.py  config.py  exceptions.py  file_watcher.py  graceful_shutdown.py  logging_config.py  models.py  monitoring.py  performance_monitor.py  processing_manager.py  query_optimizer.py  scaling_manager.py  security.py  security_middleware.py  web_downloader.py  websocket_manager.py
pdf-to-json/src/converter/: README_team_normalizer.md  __init__.py  advanced_reporter.py  config_loader.py  config_manager.py  converter.py  data_processor.py  day_splitter.py  error_handler.py  exceptions.py  football_converter.py  football_extractor.py  json_generator.py  logging_config.py  market_processor.py  optimized_converter.py  pdf_parser.py  report_generator.py  schema_validator.py  team_normalizer.py
pdf-to-json/src/database/: __init__.py  cleanup.py  connection.py  migrations.py  models.py  repositories.py
pdf-to-json/src/ui/: streamlit_app.py
pdf-to-json/src/ui/react-dashboard/: package-lock.json  package.json
pdf-to-json/src/ui/react-dashboard/public/: index.html
pdf-to-json/src/ui/react-dashboard/src/: App.tsx  setupTests.ts
pdf-to-json/src/ui/react-dashboard/src/components/: Dashboard.tsx  FileUpload.tsx  Reports.tsx  Settings.tsx
pdf-to-json/src/ui/react-dashboard/src/components/__tests__/: Dashboard.test.tsx  FileUpload.test.tsx  Reports.test.tsx  Settings.enhanced.test.tsx  Settings.test.tsx
pdf-to-json/src/ui/react-dashboard/src/services/: api.ts  websocket.ts
pdf-to-json/tests/: test_advanced_reporter.py  test_advanced_reporter_integration.py  test_api_basic.py  test_api_enhanced.py  test_automation_config.py  test_automation_manager_integration.py  test_cache_manager.py  test_comprehensive_coverage.py  test_config_loader.py  test_converter.py  test_data_processor.py  test_day_splitter.py  test_default_configurations.py  test_enhanced_extractor.py  test_error_handling.py  test_file_watcher.py  test_football_converter.py  test_football_extractor.py  test_integration_convert_football_cli.py  test_integration_day_splitter.py  test_integration_market_processor.py  test_market_processor.py  test_optimized_converter_integration.py  test_optimized_converter_performance.py  test_processing_manager.py  test_report_generator.py  test_report_generator_integration.py  test_task_12_verification.py  test_team_normalizer.py  test_web_downloader.py  test_websocket_api_integration.py  test_websocket_manager.py  validate_api.py
scrap/: first-match.html  flashcore.py  flashscore.html  flashscore.json  full_page_content.html  (+4 more)
(+2294 files in other folders)
